# C-Takeaway-Ordering-System

./: CMakeLists.txt  C语言程序编写规范-《程序设计基础（C语言》课程使用.pptx  FuzzySearch.h  Manager.c  Project5.sln  README.md  SearchFuzzy&SaleRecipe.h  Search_Classify_in_Merchant.c  Search_Recipe_in_Class.c  class.h  classTree.h  createFolder.c  createList.c  createTree.c  deleteTree.c  delete_data.c  delete_folder.c  delete_folder.h  delete_node.c  dirent.h  discount&card_change.c  discount_card_change.c  duplicate_name.c  find_account_in_the_list.c  find_free_deliver.c  flow.tex  folder_c_c_d.c  folder_create_change_delete.h  get_back_p.c  insertTree.c  interface.h  isInteger.c  login_f.c  main.c  mergeSortOrder.h  mergeSortRecipe.h  merge_sort.c  name_a_pass.c  output_main.c  output_recipe_price_range.h  (+18 more)
Merchant List/: tom
Merchant List/Order List/: order1
Project1/: Project1.sln
Project1/Project1/: Project1.vcxproj  源.c
Project1/Project1/Debug/: Project1.exe.recipe  Project1.ilk  vc142.idb
Project5/: Project5.sln  Project5.vcxproj  Project5.vcxproj.filters  标头.h  源.cpp  源1.cpp  源2.cpp
Project5/Debug/: Project5.exe.recipe  Project5.ilk  vc142.idb
Project5/Debug/Project5.tlog/: CL.command.1.tlog  CL.write.1.tlog  Project5.lastbuildstate  link.read.1.tlog  (+1 more)
Project5/Project5/: Project5.vcxproj  Project5.vcxproj.filters  标头.h  源.cpp
header/: mergeSortOrder.h  output_recipe_price_range.h  setStar_recipe.h
source/: Manager.c  README.md  createList.c  deleteTree.c  delete_node.c  discount_card_change.c  find_account_in_the_list.c  main.c  name_a_pass.c  printList.c  sum_price.c
(+21 files in other folders)
